@@ -112,14 +112,14 @@ LIB=e X_LIBS:M${LIB${LIB:tu}} is "/tmp/libe.a"
 LIB=e X_LIBS:M*/lib${LIB}.a is "/tmp/libe.a"
 LIB=e X_LIBS:M*/lib${LIB}.a:tu is "/TMP/LIBE.A"
 Mscanner=OK
-path=':/bin:/usr/bin::/:.:/user/bin:.'
-path='/bin:/usr/bin:/:/user/bin'
-path='/bin:/usr/bin:/:/user/bin'
-path='/bin':'/usr/bin':'/':'/user/bin'
-path='/bin':'/usr/bin':'/':'/user/bin'
+path=':/bin:/tmp::/:.:/no/such/dir:.'
+path='/bin:/tmp:/:/no/such/dir'
+path='/bin:/tmp:/:/no/such/dir'
+path='/bin':'/tmp':'/':'/no/such/dir'
+path='/bin':'/tmp':'/':'/no/such/dir'
 path_/usr/xbin=/opt/xbin/
-paths=/bin /usr/bin / /user/bin /opt/xbin
-PATHS=/BIN /USR/BIN / /USER/BIN /OPT/XBIN
+paths=/bin /tmp / /no/such/dir /opt/xbin
+PATHS=/BIN /TMP / /NO/SUCH/DIR /OPT/XBIN
 LIST      = one two three four five six seven eight nine ten
 LIST:O    = eight five four nine one seven six ten three two
 LIST:Ox   = Ok
